--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ui.liveOrder.OrderFragment">
+    tools:context=".ui.order.OrderFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_order"
