--- a/app/src/main/res/layout/fragment_order_list.xml
+++ b/app/src/main/res/layout/fragment_order_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.liveOrder.OrderListFragment">
+    tools:context=".ui.order.OrderListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list_order"
