--- a/app/src/main/res/layout/fragment_profil_tentang.xml
+++ b/app/src/main/res/layout/fragment_profil_tentang.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView37"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:text="Tentang Rime Syar'i"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -33,13 +33,15 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="401dp"
-        android:layout_height="65dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:lineSpacingExtra="8sp"
         android:text="Rime Syar'i merupakan Brand Muslimah yang menyediakan Pakaian Syar'i  dengan model yang  simple dan  minimalis namun tetap stylish dan  tetap syar'i  Since 2019. "
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView37" />
 
