--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,39 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+    <group
+        android:scaleX="0.75"
+        android:scaleY="0.75"
+        android:pivotX="480"
+        android:pivotY="480">
+        <path
+            android:pathData="M755.4,480.7c-39.6,-41.9 -96.2,-2.2 -149.1,54.6C547.4,597.5 448.5,755 386.9,755c-49.7,0 -85.3,-48.2 -26.4,-142.9c-42.6,44.8 -82.1,82.2 -62.7,133.2c24.1,52.8 92.2,71.2 137.6,47.1c38.1,-21.8 100.3,-116 160.2,-192.5C648,532.4 704.3,477.2 755.4,480.7z"
+            android:fillColor="#EC1F60"/>
+        <path
+            android:pathData="M551.9,453.5c32.7,9 58.8,-24.5 80.9,-47.4c24.6,-24.3 49.9,-8.7 70.3,11.1c-40.7,-5.8 -70.4,35.2 -99.5,55.7c-26.5,18.4 -53.3,3.8 -69.8,-22l4.2,-6.5C541.8,449.1 546.5,452.3 551.9,453.5z"
+            android:fillColor="#EC1F60"/>
+        <path
+            android:pathData="M350.9,744.2c-14.7,6.8 -29.9,11.8 -45.3,15c-3,-4.3 -5.6,-9 -7.9,-13.9c-19.4,-51 20.1,-88.3 62.7,-133.2C317.7,680.9 324.8,725.2 350.9,744.2z"
+            android:fillColor="#EC1F60"/>
+        <path
+            android:pathData="M703.1,417.3c-49.9,-34.4 -103,-52.1 -163.5,29c-58.1,76.4 -128.9,162.4 -191,199.4c-56.4,30.6 -114.7,20.5 -138.1,-29.5C190,565.4 225.6,501 277.1,445.4c65.6,-74.3 232,-157.6 202.9,-288.2c22.4,19.2 38.3,42.3 40,63c2.3,28.2 -2.3,76.1 -67.8,132.2c-72,58.7 -160,125.6 -197.6,189.1c-12.9,21.7 -33.7,78.1 -1.7,90.3c20.6,8 53,-3.2 93.6,-34.4c40.2,-31.8 108.3,-106 173.9,-191.2C563,351 650.8,353.5 703.1,417.3z"
+            android:fillColor="#EC1F60"/>
+        <path
+            android:pathData="M703.1,417.3c-13.2,-1.9 -25.1,1.2 -36.3,6.8c-12.1,-6.9 -26.4,-11.3 -40.6,-10.9c2.2,-2.4 4.5,-4.8 6.6,-7c8.8,-8.8 17.8,-12.3 26.6,-12.4h0C674.2,398.9 688.8,407.4 703.1,417.3z"
+            android:fillColor="#EC1F60"/>
+        <path
+            android:pathData="M703.1,417.3c-14.3,-9.9 -28.8,-18.4 -43.8,-23.6C674.9,393.6 690,404.6 703.1,417.3z"
+            android:fillColor="#EC1F60"/>
+        <path
+            android:pathData="M452.2,352.4c-72,58.7 -160,125.6 -197.6,189.1c-12.9,21.7 -33.7,78.1 -1.7,90.3c-28.2,-10.5 -55.1,-37.8 -42.6,-81.6c10.8,-34.9 36,-71.4 66.9,-104.8c65.6,-74.3 232,-157.6 202.9,-288.2c22.4,19.2 38.3,42.3 40,63C522.3,248.4 517.7,296.3 452.2,352.4z"
+            android:fillColor="#EC1F60"/>
+        <path
+            android:pathData="M539.6,446.3c3.5,3.6 7.7,6.2 12.3,7.2c6.7,1.8 13,1.9 19.2,0.6c-4.6,6.7 -9.1,13.8 -13.7,20.8c-8.6,-5.1 -16.3,-12.9 -22.6,-22.4L539.6,446.3z"
+            android:fillColor="#EC1F60"/>
+        <path
+            android:pathData="M728.9,670.7c-17.5,0 -33.3,7.1 -44.8,18.6c-11.4,11.4 -18.6,27.3 -18.6,44.8c0,-17.5 -7.1,-33.4 -18.6,-44.8c-11.5,-11.5 -27.3,-18.6 -44.8,-18.6c35,0 63.4,-28.4 63.4,-63.4c0,17.5 7.1,33.4 18.6,44.8C695.5,663.6 711.4,670.7 728.9,670.7z"
+            android:fillColor="#EC1F60"/>
+    </group>
 </vector>
