--- a/app/src/main/res/layout/fragment_form_profil_biodata_alamat.xml
+++ b/app/src/main/res/layout/fragment_form_profil_biodata_alamat.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.form_profil_biodata_alamat.FormProfilBiodataAlamatFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -14,133 +15,201 @@
         android:minHeight="?attr/actionBarSize"
         android:background="@color/white"
         app:layout_anchorGravity="center"
-        android:theme="@style/ThemeOverlay.RimeSyariFix.ToolBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:theme="@style/ThemeOverlay.RimeSyariFix.ToolBar" />
 
-    <TextView
-        android:id="@+id/tv_form_profil_biodata_alamat_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Alamat"
-        android:textColor="@color/gray_600"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_form_profil_biodata_alamat" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/et_form_profil_biodata_alamat_edit"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_form_profil_biodata_alamat_title" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_form_profil_biodata_alamat_kode_pos_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:text="Kode Pos"
-        android:textColor="@color/gray_600"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_form_profil_biodata_alamat_edit" />
+            <TextView
+                android:id="@+id/tv_form_profil_biodata_alamat_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Alamat"
+                android:textColor="@color/gray_600"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/toolbar_form_profil_biodata_alamat" />
 
-    <EditText
-        android:id="@+id/et_form_profil_biodata_alamat_kode_pos_edit"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_form_profil_biodata_alamat_kode_pos_title" />
+            <EditText
+                android:id="@+id/et_form_profil_biodata_alamat_edit"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:ems="10"
+                android:gravity="start|top"
+                android:inputType="textMultiLine"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_form_profil_biodata_alamat_title" />
 
-    <TextView
-        android:id="@+id/tv_form_profil_biodata_alamat_desa_kelurahan_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:text="Desa/Kelurahan"
-        android:textColor="@color/gray_600"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_form_profil_biodata_alamat_kode_pos_edit" />
+            <TextView
+                android:id="@+id/tv_form_profil_biodata_alamat_kode_pos_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:text="Kode Pos"
+                android:textColor="@color/gray_600"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_form_profil_biodata_alamat_edit" />
 
-    <Button
-        android:id="@+id/btn_form_profil_biodata_alamat_simpan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="32dp"
-        android:text="Simpan"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+            <EditText
+                android:id="@+id/et_form_profil_biodata_alamat_kode_pos_edit"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_form_profil_biodata_alamat_kode_pos_title" />
 
-    <TextView
-        android:id="@+id/tv_form_profil_biodata_alamat_catatan_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Catatan"
-        android:textColor="@color/gray_600"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/autoet_form_profil_biodata_alamat_desa_kelurahan" />
+            <TextView
+                android:id="@+id/tv_form_profil_biodata_alamat_desa_kelurahan_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Desa / Kelurahan"
+                android:textColor="@color/gray_600"
+                app:layout_constraintStart_toStartOf="@+id/autoet_form_profil_biodata_alamat_kecamatan"
+                app:layout_constraintTop_toBottomOf="@+id/autoet_form_profil_biodata_alamat_kecamatan" />
 
-    <EditText
-        android:id="@+id/et_form_profil_biodata_alamat_catatan_edit"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:minHeight="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:ems="10"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_form_profil_biodata_alamat_catatan_title" />
+            <Button
+                android:id="@+id/btn_form_profil_biodata_alamat_simpan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="32dp"
+                android:text="Simpan"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cb_form_profil_biodata_alamat_set_default" />
 
-    <CheckBox
-        android:id="@+id/cb_form_profil_biodata_alamat_set_default"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        android:text="Jadikan sebagai default"
-        android:textColor="@color/gray_800"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_form_profil_biodata_alamat_catatan_edit" />
+            <TextView
+                android:id="@+id/tv_form_profil_biodata_alamat_catatan_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Catatan"
+                android:textColor="@color/gray_600"
+                app:layout_constraintStart_toStartOf="@+id/autoet_form_profil_biodata_alamat_desa_kelurahan"
+                app:layout_constraintTop_toBottomOf="@+id/autoet_form_profil_biodata_alamat_desa_kelurahan" />
 
-    <AutoCompleteTextView
-        android:id="@+id/autoet_form_profil_biodata_alamat_desa_kelurahan"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/tv_form_profil_biodata_alamat_desa_kelurahan_title"
-        app:layout_constraintTop_toBottomOf="@+id/tv_form_profil_biodata_alamat_desa_kelurahan_title" />
+            <EditText
+                android:id="@+id/et_form_profil_biodata_alamat_catatan_edit"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:ems="10"
+                android:gravity="start|top"
+                android:inputType="textMultiLine"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_form_profil_biodata_alamat_catatan_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_form_profil_biodata_alamat_catatan_title" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <CheckBox
+                android:id="@+id/cb_form_profil_biodata_alamat_set_default"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:text="Jadikan sebagai default"
+                android:textColor="@color/gray_800"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_form_profil_biodata_alamat_catatan_edit" />
+
+            <AutoCompleteTextView
+                android:id="@+id/autoet_form_profil_biodata_alamat_desa_kelurahan"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:minHeight="48dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_form_profil_biodata_alamat_desa_kelurahan_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_form_profil_biodata_alamat_desa_kelurahan_title" />
+
+            <TextView
+                android:id="@+id/tv_form_profil_biodata_alamat_kecamatan_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Kecamatan"
+                android:textColor="@color/gray_600"
+                app:layout_constraintStart_toStartOf="@+id/autoet_form_profil_biodata_alamat_kabupaten_kota"
+                app:layout_constraintTop_toBottomOf="@+id/autoet_form_profil_biodata_alamat_kabupaten_kota" />
+
+            <AutoCompleteTextView
+                android:id="@+id/autoet_form_profil_biodata_alamat_kecamatan"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_form_profil_biodata_alamat_kecamatan_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_form_profil_biodata_alamat_kecamatan_title" />
+
+            <TextView
+                android:id="@+id/tv_form_profil_biodata_alamat_kabupaten_kota_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Kabupaten / Kota"
+                android:textColor="@color/gray_600"
+                app:layout_constraintStart_toStartOf="@+id/autoet_form_profil_biodata_alamat_provinsi"
+                app:layout_constraintTop_toBottomOf="@+id/autoet_form_profil_biodata_alamat_provinsi" />
+
+            <AutoCompleteTextView
+                android:id="@+id/autoet_form_profil_biodata_alamat_kabupaten_kota"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_form_profil_biodata_alamat_kabupaten_kota_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_form_profil_biodata_alamat_kabupaten_kota_title" />
+
+            <TextView
+                android:id="@+id/tv_form_profil_biodata_alamat_provinsi_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="Provinsi"
+                android:textColor="@color/gray_600"
+                app:layout_constraintStart_toStartOf="@+id/et_form_profil_biodata_alamat_kode_pos_edit"
+                app:layout_constraintTop_toBottomOf="@+id/et_form_profil_biodata_alamat_kode_pos_edit" />
+
+            <AutoCompleteTextView
+                android:id="@+id/autoet_form_profil_biodata_alamat_provinsi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_form_profil_biodata_alamat_provinsi_title"
+                app:layout_constraintTop_toBottomOf="@+id/tv_form_profil_biodata_alamat_provinsi_title" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+</LinearLayout>
