--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -30,7 +30,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:letterSpacing="0.05"
-                android:text="O19-A113BZ"
                 android:textAllCaps="true"
                 android:textColor="@color/gray_800"
                 android:textSize="24sp"
@@ -60,7 +59,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:letterSpacing="0.15"
-                    android:text="Sedang dikemas"
                     android:textAllCaps="true"
                     android:textColor="@color/gray_500"
                     android:textSize="8sp"
@@ -98,7 +96,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Jalan Kulintang no. 33 RT 36, Kelurahan Dadi Mulya, Kecamatan Samarinda Ulu, Samarinda, 75123 (depan sanggar rubinha)"
                 android:textColor="@color/gray_600"
                 app:layout_constraintEnd_toStartOf="@+id/gr_order_detail"
                 app:layout_constraintStart_toStartOf="@+id/gl_order_detail"
@@ -167,18 +164,18 @@
                 android:id="@+id/divider"
                 android:layout_width="0dp"
                 android:layout_height="1dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:background="@color/gray_400"
                 app:layout_constraintEnd_toStartOf="@+id/gr_order_detail"
                 app:layout_constraintStart_toStartOf="@+id/gl_order_detail"
-                app:layout_constraintTop_toBottomOf="@+id/tv_order_detail_metode_pembelian_title" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_order_detail_payment_notice" />
 
             <TextView
                 android:id="@+id/tv_order_detail_total_harga"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Rp 1.250.000"
+                android:text="Rp 0"
                 android:textColor="@color/gray_800"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -190,7 +187,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="x32"
+                android:text="0 item"
                 android:textColor="@color/gray_700"
                 app:layout_constraintEnd_toStartOf="@+id/gr_order_detail"
                 app:layout_constraintTop_toBottomOf="@+id/rv_order_detail_produk_list" />
@@ -211,11 +208,18 @@
                 android:id="@+id/tv_order_detail_metode_pembayaran_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="COD"
                 android:textColor="@color/gray_700"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_order_detail_metode_pembelian_title"
                 app:layout_constraintEnd_toStartOf="@+id/gr_order_detail"
                 app:layout_constraintTop_toTopOf="@+id/tv_order_detail_metode_pembelian_title" />
+
+            <TextView
+                android:id="@+id/tv_order_detail_payment_notice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="@+id/gl_order_detail"
+                app:layout_constraintTop_toBottomOf="@+id/tv_order_detail_metode_pembelian_title" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
