--- a/app/src/main/res/menu/menu_keranjang_detail.xml
+++ b/app/src/main/res/menu/menu_keranjang_detail.xml
@@ -5,4 +5,9 @@
         android:id="@+id/menu_keranjang_hapus"
         android:title="Hapus"
         app:showAsAction="collapseActionView" />
+    <item
+        android:id="@+id/menu_keranjang_simpan"
+        android:title="Simpan"
+        android:icon="@drawable/icon_save"
+        app:showAsAction="ifRoom|collapseActionView" />
 </menu>
